--- a/AI bootcamp project.ipynb
+++ b/AI bootcamp project.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "f82c9c23",
+   "metadata": {},
+   "source": [
+    "we did this project as a group, members are:\n",
+    "- Maryam Faisal Altuwaijri\n",
+    "- Khawlah Abdulrahman Alhamed\n",
+    "- Remas Mohammad Otayn"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 40,
    "id": "9f6e0103",
